--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 variables:
   ml-ws-connection: 'Visual Studio Enterprise Subscription – MPN (5a08125c-2531-42b0-9fdc-00b11537f0bb)' # Workspace Service Connection name
-  ml-ws: 'New-WS-ML' # AML Workspace name
-  ml-rg: 'NetworkWatcherRG' # AML resource Group name
+  ml-ws: 'aml-demo' # AML Workspace name
+  ml-rg: 'aml-demo' # AML resource Group name
   ml-ct: 'cpu-cluster-1' # AML Compute cluster name
   ml-path: 'models/diabetes' # Model directory path in repo
   ml-exp: 'exp-test' # Experiment name
